--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,59 @@
     </style>
   </head>
   <script src="/socket.io/socket.io.js"></script>
-<script>
-  const socket = io();
-</script>
   <body>
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
+      <button id="toggle-btn">Disconnect</button>
     </form>
+    
   </body>
+  <script src="/socket.io/socket.io.js"></script>
+<script>
+  let counter = 0;
+  const socket = io({
+    auth: {
+      serverOffset: 0
+    },
+    ackTimeout: 10000,
+  retries: 3
+  });
+
+  const form = document.getElementById('form');
+  const input = document.getElementById('input');
+  const messages = document.getElementById('messages');
+
+  form.addEventListener('submit', (e) => {
+    e.preventDefault();
+    if (input.value) {
+      // compute a unique offset
+      const clientOffset = `${socket.id}-${counter++}`;
+      socket.emit('chat message', input.value, clientOffset);
+      input.value = '';
+     
+    }
+  });
+
+  socket.on('chat message', (msg, serverOffset) => {
+    const item = document.createElement('li');
+    item.textContent = msg;
+    messages.appendChild(item);
+    window.scrollTo(0, document.body.scrollHeight);
+    socket.auth.serverOffset = serverOffset;
+  });
+
+  const toggleButton = document.getElementById('toggle-btn');
+
+  toggleButton.addEventListener('click', (e) => {
+    e.preventDefault();
+    if (socket.connected) {
+      toggleButton.innerText = 'Connect';
+      socket.disconnect();
+    } else {
+      toggleButton.innerText = 'Disconnect';
+      socket.connect();
+    }
+  });
+</script>
 </html>
